--- a/default.html
+++ b/default.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Cláudio Ramos</title>
   <meta charset="UTF-8">
@@ -22,7 +23,10 @@
   <link rel="stylesheet" href="\node_modules\bootstrap-icons\font\bootstrap-icons.min.css">
 
   <style>
-
+    a {
+      color: inherit;
+      text-decoration: none;
+    }
   </style>
 </head>
 
@@ -97,7 +101,7 @@
           quartos, promovendo uma gestão mais eficiente e automatizada dessas atividades.
         </p>
 
-        <h3 class="w3-padding-16 w3-text-light-grey">Dev Skills</h3>
+        <h3 class="w3-padding-16 w3-text-light-grey">Tecnologia e Linguagens</h3>
         <p class="w3-wide pt-2">.NET
           <img data-toggle="tooltip" data-placement="top" title=".NET" align="center" height="30" width="40"
             src="https://raw.githubusercontent.com/devicons/devicon/master/icons/dotnetcore/dotnetcore-original.svg">
@@ -155,7 +159,8 @@
         </div>
         <br>
 
-        <a class="w3-button w3-light-grey w3-padding-large w3-section" href="documents\Cláudio Currículo.pdf" target="_blank">
+        <a class="w3-button w3-light-grey w3-padding-large w3-section" href="documents\Cláudio Currículo.pdf"
+          target="_blank">
           <i class="fa fa-download"></i> Baixar currículo
         </a>
 
@@ -164,7 +169,7 @@
 
       <!-- Portfolio Section -->
       <div class="w3-padding-64 w3-content" id="photos">
-        <h2 class="w3-text-light-grey">Projects</h2>
+        <h2 class="w3-text-light-grey">Projetos</h2>
         <hr style="width:200px" class="w3-opacity">
 
         <!-- Grid for photos -->
@@ -195,7 +200,7 @@
         </div> -->
 
         <!-- Carousel de projetos -->
-        <div id="carouselExampleDark" class="carousel carousel-dark slide">
+        <!-- <div id="carouselExampleDark" class="carousel carousel-dark slide">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
               aria-current="true" aria-label="Slide 1"></button>
@@ -207,24 +212,12 @@
           <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="10000">
               <img src="https://www.w3schools.com/w3images/underwater.jpg" class="d-block w-100" alt="...">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>First slide label</h5>
-                <p>Some representative placeholder content for the first slide.</p>
-              </div>
             </div>
             <div class="carousel-item" data-bs-interval="2000">
               <img src="https://www.w3schools.com/w3images/p6.jpg" class="d-block w-100" alt="...">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>Second slide label</h5>
-                <p>Some representative placeholder content for the second slide.</p>
-              </div>
             </div>
             <div class="carousel-item">
               <img src="https://www.w3schools.com/w3images/chef.jpg" class="d-block w-100" alt="...">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>Third slide label</h5>
-                <p>Some representative placeholder content for the third slide.</p>
-              </div>
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
@@ -237,6 +230,84 @@
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
           </button>
+        </div> -->
+
+        <div id="carouselExample" class="carousel slide w3-hide-small ">
+          <div class="carousel-inner">
+            <!-- Primeiro carousel -->
+            <div class="carousel-item active">
+              <div class="cards-wrapper">
+                <div class="card" style="width: 35rem;">
+                  <img src="img\projects\projeto_pokedex.png" width="90" class="card-img-top" alt="pokedex">
+                  <div class="card-body">
+                    <h5 class="card-title">Pokédex</h5>
+                    <p class="card-text">
+                      Desenvolvimento de uma réplica web da icônica Pokédex do anime Pokémon. O projeto foi realizado
+                      utilizando uma API externa para consultar e exibir informações detalhadas sobre mais de 100 mil
+                      Pokémon.
+                    </p>
+                    <a href="https://cjramos-shift.github.io/pokedex/" class="w3-button w3-black w3-padding-large"
+                      target="_blank"><i class="fa fa-github w3-hover-opacity"></i> Visualizar</a>
+                  </div>
+                </div>
+
+                <div class="card" style="width: 35rem;">
+                  <img src="img\projects\conversor_alura.png" class="card-img-top" alt="Sistema_Ocorrencias">
+                  <div class="card-body">
+                    <h5 class="card-title">Conversor de moeda</h5>
+                    <p class="card-text">Programa simples de conversão de moedas. Foi proposto pela Alura, em uma master class de HTML, CSS e JS, 
+                      a ideia de implementação de uma tela para conversão da moeda brasileira (R$) para a moeda americana (US$).
+                    </p>
+                    <a href="https://cjramos-shift.github.io/Conversor_Alura/ConversorMoedaAlura.html"
+                      class="w3-button w3-black w3-padding-large" target="_blank"><i
+                        class="fa fa-github w3-hover-opacity"></i> Visualizar</a>
+                  </div>
+                </div>
+
+                <div class="card" style="width: 35rem;">
+                  <img src="img\projects\desenvolvimento.jpg" class="card-img-top" alt="Sistema_Ocorrencias">
+                  <div class="card-body">
+                    <h5 class="card-title">Sistema de ocorrências</h5>
+                    <p class="card-text">Sistema de desenvolvimento totalmente parametrizavel, com uma tela dinâmica de
+                      carregamento de elementos.</p>
+                    <button href="#" class="w3-button w3-black w3-padding-large" disabled>Em desenvolvimento</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Segundo carousel -->
+            <div class="carousel-item">
+              <div class="cards-wrapper">
+                <div class="card" style="width: 20rem;">
+                  <img src="img\projects\desenvolvimento.jpg" class="card-img-top" alt="Futuro">
+                  <div class="card-body">
+                    <h5 class="card-title">Mais projetos em breve</h5>
+                    <p class="card-text"></p>
+                    <!-- <a href="#"
+                      class="w3-button w3-black w3-padding-large" target="_blank"><i
+                        class="fa fa-github w3-hover-opacity"></i>Visualizar</a> -->
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Terceiro carousel -->
+            <!-- <div class="carousel-item">
+              <img src="..." class="d-block w-100" alt="...">
+            </div> -->
+          </div>
+
+          <div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
         </div>
 
       </div>
@@ -245,40 +316,85 @@
 
       <!-- Contact Section -->
       <div class="w3-padding-64 w3-content w3-text-grey" id="contact">
-        <h2 class="w3-text-light-grey">Contact Me</h2>
+        <h2 class="w3-text-light-grey">Contato</h2>
         <hr style="width:200px" class="w3-opacity">
 
-        <div class="w3-section">
-          <p><i class="fa fa-map-marker fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Chicago, US</p>
-          <p><i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Phone: +00 151515</p>
-          <p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> Email: mail@mail.com</p>
-        </div><br>
-        <p>Let's get in touch. Send me a message:</p>
+        <div class="row">
+          <div class="col-6">
+            <div class="w3-section">
+              <p><i class="fa fa-map-marker fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Araraquara, SP</p>
+              <p>
+                <a href="https://api.whatsapp.com/send/?phone=5516988776029&text&text=Oi%20Cláudio!%20Vim%20pelo%20seu%20portifólio&type=phone_number&app_absent=0"
+                  target="_blank">
+                  <i class="fa fa-whatsapp fa-fw w3-text-white w3-xxlarge w3-margin-right"></i>
+                </a>
+                +55 (16) 98877-6029
+              </p>
+              <p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> cjramos96@protonmail.com
+              </p>
+            </div>
+          </div>
+          <div class="col-6">
+            <div class="w3-section">
+              <p>
+                <a href="https://www.linkedin.com/in/claudiojcramos/" target="_blank">
+                  <i class="fa fa-linkedin fa-fw w3-text-white w3-xxlarge w3-margin-right"></i>
+                </a>
+                Cláudio Ramos
+              </p>
+              <p>
+                <a href="https://github.com/cjramos-shift" target="_blank">
+                  <i class="fa fa-github fa-fw w3-text-white w3-xxlarge w3-margin-right"></i>
+                </a>
+                cjramos-shift
+              </p>
+              <p>
+                <a href="https://www.instagram.com/claudinho_jc?igsh=Z3gwNjBtbzl3cjE4" target="_blank">
+                  <i class="fa fa-instagram fa-fw w3-text-white w3-xxlarge w3-margin-right"></i>
+                </a>
+                claudinho_jc
+              </p>
+            </div>
+          </div>
+          <br>
+        </div>
+        <!-- <p>Entre em contato comigo:</p> -->
 
-        <form action="/action_page.php" target="_blank">
-          <p><input class="w3-input w3-padding-16" type="text" placeholder="Name" required name="Name"></p>
-          <p><input class="w3-input w3-padding-16" type="text" placeholder="Email" required name="Email"></p>
-          <p><input class="w3-input w3-padding-16" type="text" placeholder="Subject" required name="Subject"></p>
-          <p><input class="w3-input w3-padding-16" type="text" placeholder="Message" required name="Message"></p>
+
+        <!-- <form target="_blank">
+          <p><input id="name" class="w3-input w3-padding-16" type="text" placeholder="Nome" required name="Name"></p>
+          <p><input id="email" class="w3-input w3-padding-16" type="text" placeholder="E-mail" required name="Email">
+          </p>
+          <p><input id="subject" class="w3-input w3-padding-16" type="text" placeholder="Assunto" required
+              name="Subject"></p>
+          <p><input id="message" class="w3-input w3-padding-16" type="text" placeholder="Mensagem" required
+              name="Message"></p>
           <p>
-            <button class="w3-button w3-light-grey w3-padding-large" type="submit">
-              <i class="fa fa-paper-plane"></i> SEND MESSAGE
+            <button class="w3-button w3-light-grey w3-padding-large" type="submit" onclick="openOutlook(event)">
+              <i class="fa fa-paper-plane"></i> Enviar
             </button>
           </p>
-        </form>
+        </form> -->
       </div>
       <!-- End Contact Section -->
     </main>
 
     <!-- Footer -->
-    <footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge">
-      <i class="fa fa-twitter w3-hover-opacity"></i>
-      <i class="fa fa-linkedin w3-hover-opacity"></i>
-
-    </footer>
+    <!-- <footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge">
+      <a href="https://www.linkedin.com/in/claudiojcramos/" target="_blank">
+        <i class="fa fa-linkedin w3-hover-opacity"></i>
+      </a>
+      <a href="https://github.com/cjramos-shift" target="_blank">
+        <i class="fa fa-github w3-hover-opacity"></i>
+      </a>
+      <br>
+      <h6>Para maiores informações, acesse minhas redes.</h6>
+    </footer> -->
     <!-- End footer -->
   </div>
 
+  <script src="script\default.js"></script>
   <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
