--- a/default.html
+++ b/default.html
@@ -21,6 +21,17 @@
   <!-- bootstrap -->
   <link href="\node_modules\bootstrap\dist\css\bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="\node_modules\bootstrap-icons\font\bootstrap-icons.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+    integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+    crossorigin="anonymous"></script>
 
   <style>
     a {
@@ -255,8 +266,10 @@
                   <img src="img\projects\conversor_alura.png" class="card-img-top" alt="Sistema_Ocorrencias">
                   <div class="card-body">
                     <h5 class="card-title">Conversor de moeda</h5>
-                    <p class="card-text">Programa simples de conversão de moedas. Foi proposto pela Alura, em uma master class de HTML, CSS e JS, 
-                      a ideia de implementação de uma tela para conversão da moeda brasileira (R$) para a moeda americana (US$).
+                    <p class="card-text">Programa simples de conversão de moedas. Foi proposto pela Alura, em uma master
+                      class de HTML, CSS e JS,
+                      a ideia de implementação de uma tela para conversão da moeda brasileira (R$) para a moeda
+                      americana (US$).
                     </p>
                     <a href="https://cjramos-shift.github.io/Conversor_Alura/ConversorMoedaAlura.html"
                       class="w3-button w3-black w3-padding-large" target="_blank"><i
