--- a/default.html
+++ b/default.html
@@ -38,6 +38,32 @@
       color: inherit;
       text-decoration: none;
     }
+
+    .card-img-overlay {
+      background-color: rgba(0, 0, 0, 0.5);
+      color: white;
+    }
+
+    .card-title {
+      margin-bottom: 0;
+    }
+
+    .card {
+      position: relative;
+    }
+
+    .card img {
+      height: 100%;
+      width: 100%;
+      object-fit: cover;
+    }
+
+    .card-body {
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      padding: 10px;
+    }
   </style>
 </head>
 
@@ -211,79 +237,29 @@
         </div> -->
 
         <!-- Carousel de projetos -->
-        <!-- <div id="carouselExampleDark" class="carousel carousel-dark slide">
-          <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
-              aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
-              aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2"
-              aria-label="Slide 3"></button>
-          </div>
-          <div class="carousel-inner">
-            <div class="carousel-item active" data-bs-interval="10000">
-              <img src="https://www.w3schools.com/w3images/underwater.jpg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item" data-bs-interval="2000">
-              <img src="https://www.w3schools.com/w3images/p6.jpg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-              <img src="https://www.w3schools.com/w3images/chef.jpg" class="d-block w-100" alt="...">
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
-            data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"
-            data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
-        </div> -->
-
-        <div id="carouselExample" class="carousel slide w3-hide-small ">
+        <div id="carouselExample" class="carousel slide w3-hide-small">
           <div class="carousel-inner">
             <!-- Primeiro carousel -->
             <div class="carousel-item active">
-              <div class="cards-wrapper">
+              <div class="cards-wrapper d-flex justify-content-center">
                 <div class="card" style="width: 35rem;">
-                  <img src="img\projects\projeto_pokedex.png" width="90" class="card-img-top" alt="pokedex">
-                  <div class="card-body">
+                  <img src="img/projects/projeto_pokedex.png" class="card-img" alt="pokedex">
+                  <div class="card-body card-img-overlay">
                     <h5 class="card-title">Pokédex</h5>
-                    <p class="card-text">
-                      Desenvolvimento de uma réplica web da icônica Pokédex do anime Pokémon. O projeto foi realizado
-                      utilizando uma API externa para consultar e exibir informações detalhadas sobre mais de 100 mil
-                      Pokémon.
-                    </p>
-                    <a href="https://cjramos-shift.github.io/pokedex/" class="w3-button w3-black w3-padding-large"
-                      target="_blank"><i class="fa fa-github w3-hover-opacity"></i> Visualizar</a>
                   </div>
                 </div>
 
                 <div class="card" style="width: 35rem;">
-                  <img src="img\projects\conversor_alura.png" class="card-img-top" alt="Sistema_Ocorrencias">
-                  <div class="card-body">
+                  <img src="img/projects/conversor_alura.png" class="card-img" alt="Conversor de moeda">
+                  <div class="card-body card-img-overlay">
                     <h5 class="card-title">Conversor de moeda</h5>
-                    <p class="card-text">Programa simples de conversão de moedas. Foi proposto pela Alura, em uma master
-                      class de HTML, CSS e JS,
-                      a ideia de implementação de uma tela para conversão da moeda brasileira (R$) para a moeda
-                      americana (US$).
-                    </p>
-                    <a href="https://cjramos-shift.github.io/Conversor_Alura/ConversorMoedaAlura.html"
-                      class="w3-button w3-black w3-padding-large" target="_blank"><i
-                        class="fa fa-github w3-hover-opacity"></i> Visualizar</a>
                   </div>
                 </div>
 
                 <div class="card" style="width: 35rem;">
-                  <img src="img\projects\desenvolvimento.jpg" class="card-img-top" alt="Sistema_Ocorrencias">
-                  <div class="card-body">
+                  <img src="img/projects/desenvolvimento.jpg" class="card-img" alt="Sistema de ocorrências">
+                  <div class="card-body card-img-overlay">
                     <h5 class="card-title">Sistema de ocorrências</h5>
-                    <p class="card-text">Sistema de desenvolvimento totalmente parametrizavel, com uma tela dinâmica de
-                      carregamento de elementos.</p>
-                    <button href="#" class="w3-button w3-black w3-padding-large" disabled>Em desenvolvimento</button>
                   </div>
                 </div>
               </div>
@@ -291,15 +267,11 @@
 
             <!-- Segundo carousel -->
             <div class="carousel-item">
-              <div class="cards-wrapper">
+              <div class="cards-wrapper d-flex justify-content-center">
                 <div class="card" style="width: 20rem;">
-                  <img src="img\projects\desenvolvimento.jpg" class="card-img-top" alt="Futuro">
-                  <div class="card-body">
+                  <img src="img/projects/desenvolvimento.jpg" class="card-img" alt="Futuro">
+                  <div class="card-body card-img-overlay">
                     <h5 class="card-title">Mais projetos em breve</h5>
-                    <p class="card-text"></p>
-                    <!-- <a href="#"
-                      class="w3-button w3-black w3-padding-large" target="_blank"><i
-                        class="fa fa-github w3-hover-opacity"></i>Visualizar</a> -->
                   </div>
                 </div>
               </div>
@@ -307,8 +279,8 @@
 
             <!-- Terceiro carousel -->
             <!-- <div class="carousel-item">
-              <img src="..." class="d-block w-100" alt="...">
-            </div> -->
+                <img src="..." class="d-block w-100" alt="...">
+              </div> -->
           </div>
 
           <div>
@@ -324,21 +296,16 @@
         </div>
 
         <!-- Projetos responsivo mobile -->
-        <div id="carouselExample2" class="carousel w3-hide-large w3-hide-medium">
+        <div id="carouselExample2" class="carousel slide w3-hide-large w3-hide-medium">
           <div class="carousel-inner">
             <div class="carousel-item active">
               <div class="cards-wrapper">
-                <div class="card" style="width: 20rem;">
-                  <img src="img\projects\projeto_pokedex.png" width="90" class="card-img-top" alt="pokedex">
-                  <div class="card-body">
+                <div class="card bg-dark text-white">
+                  <img src="img/projects/projeto_pokedex.png" class="card-img" alt="Pokédex">
+                  <div class="card-img-overlay">
                     <h5 class="card-title">Pokédex</h5>
-                    <p class="card-text">
-                      Desenvolvimento de uma réplica web da icônica Pokédex do anime Pokémon. O projeto foi realizado
-                      utilizando uma API externa para consultar e exibir informações detalhadas sobre mais de 100 mil
-                      Pokémon.
-                    </p>
-                    <a href="https://cjramos-shift.github.io/pokedex/" class="w3-button w3-black w3-padding-large"
-                      target="_blank"><i class="fa fa-github w3-hover-opacity"></i> Visualizar</a>
+                    <a href="https://cjramos-shift.github.io/pokedex/" class="btn btn-primary"
+                      target="_blank">Visualizar</a>
                   </div>
                 </div>
               </div>
@@ -346,18 +313,12 @@
 
             <div class="carousel-item">
               <div class="cards-wrapper">
-                <div class="card" style="width: 20rem;">
-                  <img src="img\projects\conversor_alura.png" class="card-img-top" alt="Sistema_Ocorrencias">
-                  <div class="card-body">
+                <div class="card bg-dark text-white">
+                  <img src="img/projects/conversor_alura.png" class="card-img" alt="Conversor de moeda">
+                  <div class="card-img-overlay">
                     <h5 class="card-title">Conversor de moeda</h5>
-                    <p class="card-text">Programa simples de conversão de moedas. Foi proposto pela Alura, em uma master
-                      class de HTML, CSS e JS,
-                      a ideia de implementação de uma tela para conversão da moeda brasileira (R$) para a moeda
-                      americana (US$).
-                    </p>
                     <a href="https://cjramos-shift.github.io/Conversor_Alura/ConversorMoedaAlura.html"
-                      class="w3-button w3-black w3-padding-large" target="_blank"><i
-                        class="fa fa-github w3-hover-opacity"></i> Visualizar</a>
+                      class="btn btn-primary" target="_blank">Visualizar</a>
                   </div>
                 </div>
               </div>
@@ -365,13 +326,11 @@
 
             <div class="carousel-item">
               <div class="cards-wrapper">
-                <div class="card" style="width: 20rem;">
-                  <img src="img\projects\desenvolvimento.jpg" class="card-img-top" alt="Sistema_Ocorrencias">
-                  <div class="card-body">
+                <div class="card bg-dark text-white">
+                  <img src="img/projects/desenvolvimento.jpg" class="card-img" alt="Sistema de ocorrências">
+                  <div class="card-img-overlay">
                     <h5 class="card-title">Sistema de ocorrências</h5>
-                    <p class="card-text">Sistema de desenvolvimento totalmente parametrizavel, com uma tela dinâmica de
-                      carregamento de elementos.</p>
-                    <button href="#" class="w3-button w3-black w3-padding-large" disabled>Em desenvolvimento</button>
+                    <button class="btn btn-secondary" disabled>Em desenvolvimento</button>
                   </div>
                 </div>
               </div>
@@ -379,35 +338,36 @@
 
             <div class="carousel-item">
               <div class="cards-wrapper">
-                <div class="card" style="width: 20rem;">
-                  <img src="img\projects\desenvolvimento.jpg" class="card-img-top" alt="Futuro">
-                  <div class="card-body">
+                <div class="card bg-dark text-white">
+                  <img src="img/projects/desenvolvimento.jpg" class="card-img" alt="Mais projetos em breve">
+                  <div class="card-img-overlay">
                     <h5 class="card-title">Mais projetos em breve</h5>
-                    <p class="card-text"></p>
-                    <!-- <a href="#"
-                    class="w3-button w3-black w3-padding-large" target="_blank"><i
-                      class="fa fa-github w3-hover-opacity"></i>Visualizar</a> -->
                   </div>
                 </div>
               </div>
             </div>
           </div>
 
-          <div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample2" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
 
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample2" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample2" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExample2" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
         </div>
         <!-- Projetos responsivo mobile -->
+
+        <!-- Acesso a página de projetos -->
+        <div>
+          <a class="w3-button w3-light-grey w3-padding-large w3-section" href="pages/projects.html">
+            Acessar Projetos
+          </a>
+        </div>
       </div>
+
       <!-- End Portfolio Section -->
 
       <!-- Contact Section -->
